# rankfmc

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.claude/: settings.local.json
.github/workflows/: pipy-publish.yml  publish.yml  python-publish.yml
docs/source/: conf.py  evaluation.rst  home.rst  quickstart.rst  rankfm.rst
examples/: instacart.ipynb  movielens.ipynb
rankfmc/: __init__.py  _rankfm.pyx  rankfm.py
tests/: test_rankfm.py
